# Bevy-Template

./: .travis.yml  Cargo.toml  FORKING.md  README.md
.cargo/: config.toml
.ci/: Dockerfile
.circleci/: config.yml
.github/workflows/: azure_mirror.yml  bitbucket_mirror.yml  ci_dockerfile_build.yml  clippy.yml  coverage.yml  gitlab_mirror.yml  platform_android.yml  platform_ios.yml  platform_linux.yml  platform_macos.yml  platform_webassembly.yml  platform_windows.yml  shared.yml  upstream_merger.yml
.jenkins/: Jenkinsfile
.teamcity/: pom.xml  settings.kts
.teamcity/patches/buildTypes/: Build.kts  Test.kts
platform/android/: README.md
platform/ios/: Cargo.toml  README.md
platform/linux/: Cargo.toml  README.md
platform/macos/: Cargo.toml  README.md
platform/webassembly/: Cargo.toml  README.md
platform/webassembly/src/tests/: mod.rs
platform/windows/: Cargo.toml  README.md
shared/: Cargo.toml  README.md
shared/src/: greet_people_plugin.rs  lib.rs
