[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!
members = [
    "platform/*",
    "shared"
]

# Enables a small amount of optimization in debug builds
[profiles.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
